objects/Workgroup_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Is this WG Currently Active</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agent_Type__c</fullName>
        <label>Agent Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Care</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chat_URL__c</fullName>
        <description>The URL to which this Workgroup exists</description>
        <label>Chat URL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_or_Area__c</fullName>
        <label>Product or Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AAG</fullName>
                </value>
                <value>
                    <fullName>Data Services</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>FSP</fullName>
                </value>
                <value>
                    <fullName>KA</fullName>
                </value>
                <value>
                    <fullName>Payroll</fullName>
                </value>
                <value>
                    <fullName>PSD</fullName>
                </value>
                <value>
                    <fullName>QBO</fullName>
                </value>
                <value>
                    <fullName>QBSE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Workgroup__c</fullName>
        <label>Workgroup</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>Workgroup__c</columns>
        <columns>Agent_Type__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>all_workgroups</fullName>
        <columns>NAME</columns>
        <columns>Agent_Type__c</columns>
        <columns>Product_or_Area__c</columns>
        <columns>Workgroup__c</columns>
        <columns>Chat_URL__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>all workgroups</label>
        <language>en_US</language>
    </listViews>
</CustomObject>